--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "angular": "~1.3",
     "angular-bootstrap": "~0.11.2",
-    "angular-ui-router": "~0.2"
+    "angular-ui-router": "~0.2",
+    "angular-ui-map": "~0.5.0"
     },
   "dependencies": {}
 }
