--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,11 @@
     "angular": "~1.3",
     "angular-bootstrap": "~0.11.2",
     "angular-ui-router": "~0.2",
-    "angular-ui-map": "~0.5.0"
-    },
-  "dependencies": {}
+    "angular-ui-map": "~0.5.0",
+    "angular-sanitize": "~1.2.27"
+  },
+  "dependencies": {},
+  "resolutions": {
+    "angular": "~1.3"
+  }
 }
